# Lenguajes

Expresiones/: AbsCalc.hi  AbsCalc.hs  Calc.cf  DocCalc.txt  LexCalc.hi  LexCalc.hs  LexCalc.x  Makefile  ParCalc.hi  ParCalc.hs  ParCalc.info  ParCalc.y  PrintCalc.hi  PrintCalc.hs  SkelCalc.hi  SkelCalc.hs  TestCalc.hi  TestCalc.hs  expresion.txt
German/Lenguajes y compiladores/Lab3/: README.html  README.md  Reglas2 1.html  laboratorio3.cabal
German/Lenguajes y compiladores/Lab3/app/: AbsImp.hs  Env.hs  LexImp.hs  Main.hs  Matching.hs  ParImp.hs  PrintImp.hs  SkelImp.hs  TestImp.hs  TestSuite.hs  TypeChecker.hs
German/Lenguajes y compiladores/Lab3/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
German/Lenguajes y compiladores/Lab3/syntaxis/: Imp.cf
German/Lenguajes y compiladores/Lab3/tests/bad/: bad01.imp  bad02.imp  bad03.imp  bad04.imp  bad05.imp  bad06.imp  bad07.imp  bad08.imp  bad09.imp  bad10.imp  bad11.imp  bad12.imp  bad13.imp  bad14.imp  bad15.imp
German/Lenguajes y compiladores/Lab3/tests/good/: arbol.imp  case.imp  example.imp  example2.imp  nested.imp
Labo1/: AbsCPP.hi  AbsCPP.hs  AbsCPP.hs.bak  CPP.cf  CPP1.cf  DocCPP.txt  DocCPP.txt.bak  ErrM.hs  LexCPP.hi  LexCPP.hs  LexCPP.x  LexCPP.x.bak  Makefile  ParCPP.hi  ParCPP.hs  ParCPP.info  ParCPP.y  ParCPP.y.bak  PrintCPP.hi  PrintCPP.hs  PrintCPP.hs.bak  SkelCPP.hi  SkelCPP.hs  SkelCPP.hs.bak  TestCPP.hi  TestCPP.hs  grade.cc  grammar.cc  greet.cc  med.cc
Listas/: AbsLista.hi  AbsLista.hs  DocLista.txt  LexLista.hi  Lista.cf  ParLista.hi  ParLista.hs  ParLista.info  ParLista.y  PrintLista.hi  PrintLista.hs  SkelLista.hi  SkelLista.hs  TestLista.hi  TestLista.hs  prueba.txt
ListasFacil/: Lista.cf  (+15 more)
(+103 files in other folders)
