cabal-version:      2.4
name:               laboratorio3
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lab3
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Matching,
                   Env,
                   AbsImp,
                   ErrM,
                   LexImp,
                   ParImp,
                   PrintImp,
                   SkelImp,
                   TestImp,
                   TypeChecker

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      array,
                      containers,
                      directory,
                      process,
                      extra

    hs-source-dirs:   app
    default-language: Haskell2010

executable test-suite
    main-is:          TestSuite.hs

    other-modules: 
                   
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      array,
                      containers,
                      directory,
                      process,
                      
    hs-source-dirs:   app

    default-language: Haskell2010
